--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div>
-    <a onclick="spel()" class="knapp" href="#">Spela sten, sax och påse</a>
+    <a onclick="spel()" class="knapp" href="#">Spela sten, sax eller påse</a>
   </div>
   <script src="uppgift5.js"></script>
 </body>
